nexus/nexus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus
  namespace: nexus
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
    - host: nexus.cybrex.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nexus-nexus-repository-manager
                port:
                  number: 8081
  tls:
    - hosts:
        - nexus.cybrex.ru
      secretName: nexus-tls
